# OAPS

./: .gitignore  AGENTS.md  AUDIT-FIX-LIST.md  AUDIT-MATURITY-MATRIX.md  AUDIT-REVIEW-PLAN.md  CHARTER.md  CONTRIBUTING.md  MAINTAINERS.md  MASTER-PLAN.md  PLANS-V2.md  PLANS.md  PROTOCOL-GAP-ANALYSIS.md  README.md  ROADMAP.md  SPEC.md  TECH_STACK.yaml  VERSIONING.md  VISION.md
.codex/: config.toml
.github/: CODEOWNERS
conformance/: INDEX.md  README.md  runner-contract.md  scopes-status.v1.json
docs/: AAIF-PROJECT-ONE-PAGER.md  AGENT-CLIENT-LANDSCAPE.md  AGNTCON-CFP-PROPOSAL.md  BACKEND-IMPLEMENTATION-PLAN.md  BINDING-MAP.md  COMMERCE-LANDSCAPE.md  COMPATIBILITY-DECLARATIONS.md  CONFORMANCE-SCOPE-INDEX.md  COSIGNERS.md  COVERAGE-MAP.md  DESIGN-LANE.md  DESIGN-PARTNERS.md  DOMAIN-PROTOCOL-MAP.md  ECOSYSTEM-MAP.md  FAQ.md  GLOSSARY.md  HOMEPAGE-CONTENT-MAP.md  HOW-TO-REVIEW-OAPS.md  IMPLEMENTATION-MAP.md  INDEX.md  MATURITY-MATRIX.md  NARRATIVE-BLOCKS.md  NEUTRAL-BY-DESIGN.md  NEXT-STEPS.md  PARALLEL-AGENT-WORKSTREAMS.md  PROFILE-MAP.md  PROTOCOL-POSITIONING.md  README.md  REVIEW-CALENDAR.md  REVIEW-ISSUE-TAXONOMY.md  REVIEW-PACKET-A2A.md  REVIEW-PACKET-COMMERCE.md  REVIEW-PACKET-INDEX.md  REVIEW-PACKET-MCP.md  REVIEW-PACKET-PAYMENT.md  (+12 more)
reference/oaps-python/: .gitignore  README.md  pyproject.toml
reference/oaps-python/aicp/: __init__.py  evidence.py  types.py  validation.py
reference/oaps-python/src/oaps_python/: __init__.py  cli.py  manifest.py
reference/oaps-python/tests/: __init__.py  test_evidence.py  test_manifest.py  test_types.py  test_validation.py
(+378 files in other folders)
